--- a/Style.css
+++ b/Style.css
@@ -1,1 +1,133 @@
-h1 { color: aqua; }
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap");
+* {
+  box-sizing: border-box;
+}
+body {
+  font-family: "Poppins", sans-serif;
+  margin: 0;
+  padding: 0;
+}
+.top-bar {
+  display: flex;
+  width: 100%;
+  height: 50px;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+.logoname {
+  width: 100px;
+  height: 20px;
+  margin-left: 20px;
+
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 20px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  color: #6070ff;
+}
+img {
+  margin-right: 20px;
+}
+.section-data {
+  background-image: url("./images/background.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.myname {
+  width: 327px;
+  height: 150px;
+  margin-left: 20px;
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 52px;
+  display: flex;
+  align-items: center;
+}
+.namedetail {
+  width: 327px;
+  height: 146px;
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+
+  color: #344563;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+.connect {
+  width: 117px;
+  height: 24px;
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 24px;
+  margin-left: 20px;
+  color: #7f8cff;
+}
+.twitter {
+  position: absolute;
+  left: 6.4%;
+  right: 88.27%;
+  top: 77.81%;
+  bottom: 18.88%;
+  margin-top: 30px;
+}
+.dot {
+  position: absolute;
+  left: 16.8%;
+  right: 81.87%;
+  top: 77.81%;
+  bottom: 21.36%;
+
+  margin-top: 30px;
+}
+.i {
+  position: absolute;
+  left: 16.8%;
+  right: 81.87%;
+  top: 78.85%;
+  bottom: 18.87%;
+  margin-top: 30px;
+}
+.n {
+  position: absolute;
+  left: 20%;
+  right: 77.87%;
+  top: 78.32%;
+  bottom: 18.87%;
+  margin-top: 30px;
+}
+.m {
+  position: absolute;
+  left: 27.47%;
+  right: 67.2%;
+  top: 78.15%;
+  bottom: 19.21%;
+  margin-top: 30px;
+}
+.g {
+  position: absolute;
+  left: 38.13%;
+  right: 57.07%;
+  top: 77.81%;
+  bottom: 18.87%;
+  margin-top: 30px;
+}
+.v {
+  position: absolute;
+  left: 48%;
+  right: 48.22%;
+  top: 77.81%;
+  bottom: 18.87%;
+  margin-top: 30px;
+}
