--- a/Style.css
+++ b/Style.css
@@ -13,10 +13,13 @@ body {
 .top-bar {
   display: flex;
   width: 100%;
-  height: 50px;
+  height: 60px;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
+}
+#logolink{
+  text-decoration: none;
 }
 
 .logoname {
@@ -81,14 +84,15 @@ img {
   margin-left: 20px;
   color: #7f8cff;
 }
-
 .twitter {
   position: absolute;
   left: 6.4%;
   right: 88.27%;
   top: 77.81%;
   bottom: 18.88%;
-  margin-top: 30px;
+ }
+ul{
+    list-style-type: none;
 }
 
 .dot {
@@ -97,8 +101,7 @@ img {
   right: 81.87%;
   top: 77.81%;
   bottom: 21.36%;
-  margin-top: 30px;
-}
+ }
 
 .i {
   position: absolute;
@@ -106,8 +109,7 @@ img {
   right: 81.87%;
   top: 78.85%;
   bottom: 18.87%;
-  margin-top: 30px;
-}
+ }
 
 .n {
   position: absolute;
@@ -115,8 +117,7 @@ img {
   right: 77.87%;
   top: 78.32%;
   bottom: 18.87%;
-  margin-top: 30px;
-}
+ }
 
 .m {
   position: absolute;
@@ -124,8 +125,7 @@ img {
   right: 67.2%;
   top: 78.15%;
   bottom: 19.21%;
-  margin-top: 30px;
-}
+ }
 
 .g {
   position: absolute;
@@ -133,8 +133,7 @@ img {
   right: 57.07%;
   top: 77.81%;
   bottom: 18.87%;
-  margin-top: 30px;
-}
+ }
 
 .v {
   position: absolute;
@@ -142,5 +141,4 @@ img {
   right: 48.22%;
   top: 77.81%;
   bottom: 18.87%;
-  margin-top: 30px;
-}
+ }
