--- a/Style.css
+++ b/Style.css
@@ -8,6 +8,9 @@ body {
   font-family: "Poppins", sans-serif;
   margin: 0;
   padding: 0;
+  background-image: url("./images/background.png");
+  background-repeat: no-repeat;
+  height: 575px;
 }
 
 .top-bar {
@@ -42,10 +45,11 @@ img {
   margin-right: 20px;
 }
 
-.section-data {
-  background-image: url("./images/background.png");
-  background-repeat: no-repeat;
-  background-size: cover;
+.socialmedia {
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+  justify-content: space-between;
 }
 
 .myname {
@@ -59,6 +63,7 @@ img {
   line-height: 52px;
   display: flex;
   align-items: center;
+  letter-spacing: 3px;
 }
 
 .namedetail {
@@ -77,71 +82,78 @@ img {
 .connect {
   width: 117px;
   height: 24px;
-  font-family: "Poppins", sans-serif;
+  font-family: "Poppins";
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
   line-height: 24px;
-  margin-left: 20px;
   color: #7f8cff;
+  margin-left: 20px;
 }
 
 .twitter {
   position: absolute;
-  left: 6.4%;
+  left: 5%;
   right: 88.27%;
-  top: 77.81%;
+  top: 70%;
   bottom: 18.88%;
+  margin: 0;
 }
 
 ul {
   list-style-type: none;
+  padding: 0px;
+  gap: 16px;
+  width: 117px;
+  height: 24px;
+  margin-top: 0;
+  padding: 0;
 }
 
 .dot {
   position: absolute;
-  left: 16.8%;
+  left: 15%;
   right: 81.87%;
-  top: 77.81%;
+  top: 70%;
   bottom: 21.36%;
 }
 
 .i {
   position: absolute;
-  left: 16.8%;
+  left: 15%;
   right: 81.87%;
-  top: 78.85%;
+  top: 71%;
   bottom: 18.87%;
 }
 
 .n {
   position: absolute;
-  left: 20%;
+  left: 16.6%;
   right: 77.87%;
-  top: 78.32%;
+  top: 70.5%;
   bottom: 18.87%;
 }
 
 .m {
   position: absolute;
-  left: 27.47%;
+  left: 25%;
   right: 67.2%;
-  top: 78.15%;
+  top: 70%;
   bottom: 19.21%;
 }
 
 .g {
   position: absolute;
-  left: 38.13%;
+  left: 33%;
   right: 57.07%;
-  top: 77.81%;
+  top: 70%;
   bottom: 18.87%;
 }
 
 .v {
   position: absolute;
-  left: 48%;
+  left: 41%;
   right: 48.22%;
-  top: 77.81%;
+  top: 70%;
   bottom: 18.87%;
 }
