--- a/Style.css
+++ b/Style.css
@@ -82,7 +82,7 @@ img {
 .connect {
   width: 117px;
   height: 24px;
-  font-family: "Poppins";
+  font-family:  "Poppins", sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
@@ -102,12 +102,10 @@ img {
 
 ul {
   list-style-type: none;
-  padding: 0px;
   gap: 16px;
   width: 117px;
   height: 24px;
   margin-top: 0;
-  padding: 0;
 }
 
 .dot {
