--- a/Style.css
+++ b/Style.css
@@ -172,7 +172,7 @@ li {
 }
 
 .software {
-  font-family: "Poppins" sans-serif;
+  font-family: "Poppins", sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 12px;
